--- a/scr/views/gui_designer.ui
+++ b/scr/views/gui_designer.ui
@@ -17,10 +17,10 @@
    <widget class="QFrame" name="frameDisplayImage">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>30</y>
-      <width>991</width>
-      <height>471</height>
+      <x>10</x>
+      <y>20</y>
+      <width>1021</width>
+      <height>481</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -32,7 +32,7 @@
     <widget class="QFrame" name="frame">
      <property name="geometry">
       <rect>
-       <x>770</x>
+       <x>810</x>
        <y>130</y>
        <width>171</width>
        <height>221</height>
@@ -78,9 +78,9 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>70</y>
-        <width>151</width>
+        <width>161</width>
         <height>31</height>
        </rect>
       </property>
@@ -92,14 +92,33 @@
       </property>
      </widget>
     </widget>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>60</y>
-       <width>281</width>
-       <height>271</height>
+       <x>20</x>
+       <y>40</y>
+       <width>371</width>
+       <height>381</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>40</y>
+       <width>371</width>
+       <height>381</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string/>
