Lectura independiente de carpeta, Falta Loading.

--- a/scr/sites/templates/index.html
+++ b/scr/sites/templates/index.html
@@ -67,23 +67,23 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-1"></div>
-                <div class="col-sm-5 text-center">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-4 text-center">
                     <input type="file" id="imgupload" style="display:none"/>
                     <button id="load_button" class="btn btn-secondary">Cargar imagen</button>
                     <img id="imgRX" class="responsive" >
                     <!-- <img src="{{ url_for('static',filename='images/COVID(13).png')}}" class="responsive" alt=""> -->
                 </div>
-                <div class="col-sm-5 text-center">
+                <div class="col-sm-4 text-center">
                     <button id="eval" class="btn btn-secondary" >Diagnóstico</button>
                     <img id="imgHeatMap" class="responsive">
                     <!-- <img src="{{ url_for('static',filename='images/image2.png')}}" alt=""> -->
                 </div>
-                <div class="col-sm-1"></div>
+                <div class="col-sm-2"></div>
             </div>
             <div class="row">
                 <div class="col-sm-4"></div>
-                <div class="col">
+                <div class="col-sm-4">
                     <canvas id="myChart">a</canvas>
                 </div>
                 <div class="col-sm-4"></div>
